# LWRLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/shaders/: base.frag  base.vert  text.frag  text.vert
example_main/: main.cpp
shaders/: base.frag
src/: archtexture.cpp  archtexture.h  hub.cpp  hub.h  inputhandler.cpp  inputhandler.h  lwrl.cpp  lwrl.h  main.cpp  polygons.h  polyrenderer.cpp  polyrenderer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  spriterenderer.cpp  spriterenderer.h  textrenderer.cpp  textrenderer.h  texture.cpp  texture.h  util.cpp  util.h
